<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="10dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/pendaftaran"
            android:fontFamily="@font/alice"
            android:gravity="center"
            android:textSize="15pt"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/DafNamaError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp">

            <EditText
                android:id="@+id/idNama"
                android:hint="@string/masukkanNama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-condensed-light"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/DafAlamatError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp">

            <EditText
                android:id="@+id/idAlamat"
                android:hint="@string/masukkanAlamat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-condensed-light"
                android:inputType="textImeMultiLine"
                android:maxLines="3"
                android:singleLine="false"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:id="@+id/idJenisKelamin"
                android:text="@string/jenisKelamin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="sans-serif-condensed-light"
                android:textColor="#000000" />

            <RadioGroup
                android:orientation="horizontal"
                android:id="@+id/rgJenisKelamin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/idLaki"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:fontFamily="sans-serif-condensed-light"
                    android:text="@string/lakilaki"
                    android:textColor="#000000"
                    android:buttonTint="@color/brown"/>

                <RadioButton
                    android:id="@+id/idPerempuan"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:fontFamily="sans-serif-condensed-light"
                    android:text="@string/perempuan"
                    android:textColor="#000000"
                    android:buttonTint="@color/brown"/>
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp">

            <TextView
                android:id="@+id/idAgama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="sans-serif-condensed-light"
                android:text="@string/agama"
                android:textColor="#000000" />

            <RadioGroup
                android:orientation="vertical"
                android:id="@+id/rg1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/idIslam"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="0.3"
                    android:fontFamily="sans-serif-condensed-light"
                    android:text="@string/islam"
                    android:textColor="#000000"
                    android:buttonTint="@color/brown"/>

                <RadioButton
                    android:id="@+id/idKatolik"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="0.3"
                    android:fontFamily="sans-serif-condensed-light"
                    android:text="@string/katolik"
                    android:textColor="#000000"
                    android:buttonTint="@color/brown"/>

                <RadioButton
                    android:id="@+id/idKristen"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="0.3"
                    android:fontFamily="sans-serif-condensed-light"
                    android:text="@string/kristen"
                    android:textColor="#000000"
                    android:buttonTint="@color/brown"/>
            </RadioGroup>

            <RadioGroup
                android:orientation="vertical"
                android:id="@+id/rg2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp">

                <RadioButton
                    android:id="@+id/idHindu"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="0.3"
                    android:fontFamily="sans-serif-condensed-light"
                    android:text="@string/hindu"
                    android:textColor="#000000"
                    android:buttonTint="@color/brown"/>

                <RadioButton
                    android:id="@+id/idBudha"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="0.3"
                    android:fontFamily="sans-serif-condensed-light"
                    android:text="@string/budha"
                    android:textColor="#000000"
                    android:buttonTint="@color/brown"/>

                <RadioButton
                    android:id="@+id/idKonghucu"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="0.3"
                    android:fontFamily="sans-serif-condensed-light"
                    android:text="@string/konghucu"
                    android:textColor="#000000"
                    android:buttonTint="@color/brown"/>
            </RadioGroup>

            <RadioGroup
                android:orientation="vertical"
                android:id="@+id/rg3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp">

                <RadioButton
                    android:id="@+id/idKepercayaan"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="0.3"
                    android:fontFamily="sans-serif-condensed-light"
                    android:text="@string/penganutKepercayaan"
                    android:textColor="#000000"
                    android:buttonTint="@color/brown"/>
            </RadioGroup>

        </LinearLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/DafEmailError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <EditText
                android:id="@+id/idDafEmail"
                android:hint="@string/masukkanEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-condensed-light"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/DafPwError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/idDafPw"
                android:hint="@string/masukkanPw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-condensed-light"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/DafRepwError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/idDafRepw"
                android:hint="@string/rePw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-condensed-light"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnBatal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/btnBatal"
                android:layout_marginRight="10dp"
                android:layout_weight="0.4"
                android:fontFamily="sans-serif-condensed-light"
                app:backgroundTint="#635858"
                app:cornerRadius="30dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnDaftar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/btnDaftar"
                android:layout_marginLeft="10dp"
                android:layout_weight="0.4"
                android:fontFamily="sans-serif-condensed-light"
                app:backgroundTint="#635858"
                app:cornerRadius="30dp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>